--- a/tests/finder_test.html
+++ b/tests/finder_test.html
@@ -14,8 +14,8 @@
 
     <input type="submit" value="Login">
   </form>
-  <form action="/login" method="POST">
-    <label for="username">Usernama:</label>
+  <form action="/sign-in">
+    <label for="username">Username:</label>
     <input type="text"
            name="username"
            id="username"
@@ -29,7 +29,7 @@
 
     <input type="submit" value="Login">
   </form>
-  <form action="/login" method="POST">
+  <form action="/log-in" method="GET">
     <input type="text" name="username" placeholder="Enter username">
     <input type="password" name="password" placeholder="Enter password">
 
