Added index file to gh-pages.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Clepta test</title>
-  <script src="../lib/underscore.js"></script>
-  <script src="../src/Finder.js"></script>
-  <script src="../src/Extractor.js"></script>
-  <script src="../src/Reporter.js"></script>
+  <script src="lib/underscore.js"></script>
+  <script src="src/Finder.js"></script>
+  <script src="src/Extractor.js"></script>
+  <script src="src/Reporter.js"></script>
 </head>
 <body>
   <form action="/login" method="POST">
